<resources>
    <string name="app_name">FBxConnect 0.1</string>
    <string name="fbxconnect_app">FbxConnect App</string>
    <string name="gas_composition_report">Gas Composition Report</string>
    <string name="efm_report">EFM Report</string>
    <string name="plate_replacement">Plate Replacement</string>
    <string name="close">Close</string>
    <string name="generate_and_view_report">Generate and View Report</string>
    <string name="select_a_station">Select a Station</string>
    <string name="select_a_meter">Select a Meter</string>
    <string name="station_2">Station 2</string>
    <string name="station_1">Station 1</string>
    <string name="all_stations">All Stations</string>
    <string name="meter_2">Meter 2</string>
    <string name="meter_1">Meter 1</string>
    <string name="all_meters">All Meters</string>
    <string name="history_type">History Type</string>
    <string name="collection_period">Collection Period</string>
    <string name="daily">Daily</string>
    <string name="hourly">Hourly</string>
    <string name="alarms">Alarms</string>
    <string name="events">Events</string>
    <string name="from">From:</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="to">To:</string>
    <string name="datefrom">dateFrom</string>
    <string name="timefrom">timeFrom</string>
    <string name="dateto">dateTo</string>
    <string name="timeto">timeTo</string>
    <string name="plate_change">Plate Change</string>
    <string name="select_the_meter">Select the Meter run that you wish to conduct the wizrd for</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="flow_conditions">Is maintenance being done under flow conditions?</string>
    <string name="shut_in">Is the meter shut-in?</string>
    <string name="cancel">Cancel</string>
    <string name="completed_maintenance">Select Next when you have completed maintenance and are ready to return the measurement to live inputs</string>
    <string name="check_orifice">Will you be changing the orifice plate size?</string>
    <string name="change_orifice">Enter new orifice plate size:</string>
    <string name="maintenance_is_complete">Maintenance is complete!</string>
    <string name="previous_orifice_plate_size">Previous orifice plate size:</string>
    <string name="in">in</string>
    <string name="differential_pressure">Differential Pressure:</string>
    <string name="inh20">inH20</string>
    <string name="static_pressure">Static Pressure:</string>
    <string name="psi_g">psi(g)</string>
    <string name="temperature">Temperature</string>
    <string name="f">°F</string>
</resources>
